--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <script type="module" src="/js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     "
-    <script>
+    <!-- <script>
       for (let i = 1; i < 20; i++) {
         alert(`Coucou ${i} fois !`);
       }
-    </script>
+    </script> -->
     "
   </body>
 </html>
