--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </form>
     </div>
 
-    <script src="/js/fetchData.js"></script>
+    <script type="module" src="/js/fetchData.js"></script>
     <script type="module" src="/js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
