--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       </form>
     </div>
 
-    <script type="module" src="/js/fetchData.js"></script>
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/js/mainFetchData.js"></script>
+    <!-- <script type="module" src="/js/main.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
   </body>
